--- a/compose.yaml
+++ b/compose.yaml
@@ -2,8 +2,12 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=nttbank'
+      - 'POSTGRES_PASSWORD=nttbank'
+      - 'POSTGRES_USER=nttbank'
     ports:
-      - '5432'
+      - '5432:5432'
+    volumes:
+      - 'postgres_data:/var/lib/postgresql/data'
+volumes:
+  postgres_data:
