--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=nttbank
+spring.datasource.url=jdbc:postgresql://db:5432/nttbank
+spring.datasource.username=nttbank
+spring.datasource.password=nttbank
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
