--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 spring.application.name=nttbank
-spring.datasource.url=jdbc:postgresql://db:5432/nttbank
-spring.datasource.username=nttbank
-spring.datasource.password=nttbank
+spring.datasource.url=jdbc:postgresql://localhost/nttbank
+spring.datasource.username=postgres
+spring.datasource.password=123456
+datasource.driver-class-name=org.postgresql.Driver
+spring.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+# Outras configurações do JPA
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configurações do Docker Compose do Spring Boot
+spring.docker.compose.enabled=true
+spring.docker.compose.file=./compose.yaml
