--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=nttbank
 spring.datasource.url=jdbc:postgresql://localhost/nttbank
-spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.username=nttbank
+spring.datasource.password=nttbank
 datasource.driver-class-name=org.postgresql.Driver
 spring.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 # Outras configurações do JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
