--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ datasource.driver-class-name=org.postgresql.Driver
 spring.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 # Outras configurações do JPA
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
