--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,12 @@ datasource.driver-class-name=org.postgresql.Driver
 spring.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 # Outras configurações do JPA
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Configurações do Docker Compose do Spring Boot
 spring.docker.compose.enabled=true
 spring.docker.compose.file=./compose.yaml
+
+server.error.include-stacktrace=never
