--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.docker.compose.enabled=true
 spring.docker.compose.file=./compose.yaml
 
 server.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET:12345678}
+
+exchange-rates.api.url=https://api.exchangerate-api.com/v4/latest
