feat: SpringDOC + OpenAPI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,9 @@ server.error.include-stacktrace=never
 api.security.token.secret=${JWT_SECRET:12345678}
 
 exchange-rates.api.url=https://api.exchangerate-api.com/v4/latest
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.info.title=Minha API Spring Boot
+springdoc.info.version=1.0.0
+springdoc.info.description=API para gerenciar exemplos no sistema.
