--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,18 @@
 services:
+  nttbank:
+    build:
+      context: .
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/nttbank  # Aqui 'db' é o nome do serviço do PostgreSQL no Docker Compose
+      - SPRING_DATASOURCE_USERNAME=nttbank
+      - SPRING_DATASOURCE_PASSWORD=nttbank
+    depends_on:
+      - postgres
+    networks:
+      - springboot-network  # Adicionando o serviço à rede 'springboot-network'
+
   postgres:
     image: 'postgres:latest'
     container_name: 'nttbank-postgres'
@@ -10,8 +24,11 @@ services:
       - '5433:5432'
     volumes:
       - 'postgres_data:/var/lib/postgresql/data'
-volumes:
-  postgres_data:
+    networks:
+      - springboot-network  # Configuração de rede para conectar os containers
+
 networks:
   springboot-network:
-    driver: bridge
+    driver: bridge  # Usando o driver 'bridge' para permitir que os containers se comuniquem
+volumes:
+  postgres_data:
